--- a/gb/22/10/5/n13839520.md
+++ b/gb/22/10/5/n13839520.md
@@ -25,39 +25,39 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/29/n13791737.md#1">联发科顾问：美晶片法案补助不现实</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/13/n13824010.md#1">防中俄入侵、剽窃 美祭“零信任架构”</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/27/n13833803.md#1">美晶片法冲击 经长：台湾商用晶片卖全球</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898629.md#1">台申请专营电支业务许可 律师可做认证人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898635.md#1">虾皮金流纳管跳票 台民团忧酿连锁金融危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898645.md#1">亏损减少 劳动基金仍累亏逾2亿元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898641.md#1">1.8万人放无薪假 制造业增逾500人最多</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962689.md#1">台积电表态不能接受美晶片补助限制 王美花：将协助沟通</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962691.md#1">台湾应筹划金融“汉光演习”？ 黄天牧：每年有压力测试</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962688.md#1">国银最大曝险 美国连30季居首</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962695.md#1">2月制造业景气连亮4蓝灯 台经院：应留意两岸科技竞合</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/17/n11118849.md#1" target="_blank">严家伟：极权专制对中国新闻界的一次严厉打压</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11411173.md#1" target="_blank">美国会点名要求中共释放左洪涛 纽约声援</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/18/n10154324.md#1" target="_blank">杨宁：中共大年期间洗脑国人始于延安时期</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13892027.md#1">他的才思从哪里来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891107.md#1">出生七年才说话 轮回转生为一人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897337.md#1">【百年真相】赔了恋人又折命 共谍关露的悲剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898734.md#1">【菁英论坛】2022觉醒之年 抛弃中共成主流</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898147.md#1">【秦鹏观察】2023全球经济预测 中国迷雾笼罩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/19/n13887450.md#1">七种商品不再有 今年Costco有哪几个变化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897095.md#1">岳山：习讲话不算数？七学者吁救民企 文章下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896722.md#1">【翻墙必看】传中共上将染疫 吃特效药身亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896835.md#1">台娱圈新年首发喜弹 翁立友“已登记”不宴客</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897346.md#1">港星万梓良现身大陆商演 步履不稳需众人搀扶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897308.md#1">蒙古族歌王拉苏荣病亡 曾多次为中共党魁演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898127.md#1">何炅主持跨年晚会洒泪舞台 疑因其父染疫去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898374.md#1">送别恩师林秋离 林俊杰现身告别式致哀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896498.md#1">党媒终于承认染疫后遗症 心肌炎多发于中青年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895971.md#1">【车评】比电动车更实用 2022 Lexus NX 450h+ F Sport Handling AWD</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894447.md#1">如何降低他汀类药物副作用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897182.md#1">新年伊始 世界各地有哪些奇特的传统？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896892.md#1">出国旅游记住9招 让你免烦恼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962711.md#1">【晚间新闻】河北邯郸驾车撞人案 伤亡或惨重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962804.md#1">【环球直击】川普被刑事起诉 各界呼吁结束闹剧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963341.md#1">【马克时空】美陆战队坦克兵谈M1A1（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961584.md#1">田馥甄喜迎40岁 深夜无预警再揭8月喜讯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/5/n13839520.htm">李淳：美晶片法案吸引招商 台半导体仍须安全考量</a></p><hr>
